fix: visibillity of button

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -56,7 +56,7 @@
   --card-foreground: oklch(0.129 0.042 264.695);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.129 0.042 264.695);
-  --primary: oklch(0.809 0.105 251.813);
+  --primary: oklch(0.882 0.059 254.128);
   --primary-foreground: oklch(0.282 0.091 267.935);
   --secondary: oklch(0.968 0.007 247.896);
   --secondary-foreground: oklch(0.208 0.042 265.755);
